<resources>
    <string name="app_name">UniLink</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">UniLink</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in UniLink now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to facebook -->

    <string name="facebook_app_id">156575761620882</string>
    <string name="fb_login_protocol_scheme">fb156575761620882</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to main drawer -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_accueil">Accueil</string>
    <string name="navigation_drawer__mes_links">Mes Links</string>
    <string name="navigation_drawer_tables">Tables</string>
    <string name="navigation_drawer_sorties">Sorties</string>
    <string name="navigation_drawer_trajets">Trajets</string>
    <string name="navigation_drawer_covoiturage">Covoiturage</string>
    <string name="navigation_drawer_calendrier">Calendrier</string>

    <string name="navigation_drawer_parametres">Paramètres</string>

    <string name="navigation_drawer_mon_mon_profil">Mon Profil</string>
    <string name="navigation_drawer_deconnection">Déconnexion</string>

    <string name="action_deconnection">Déconnexion</string>
    <string name="description">description</string>
    <string name="nombre">nombre</string>
    <string name="lieu">lieu</string>
    <string name="time_picker_title">time</string>
    <string name="time_picker_title_min">time min</string>
    <string name="time_picker_title_max">time max</string>
    <string name="date_picker_title">date</string>
    <string name="title_activity_maps">Map</string>

    <!-- String Fragments-->
    <string name="fragment_heure">Heure : </string>
    <string name="fragment_date">Date : </string>
    <string name="fragment_lieu">Lieu : </string>
    <string name="fragment_description">Description : </string>
    <string name="fragment_participants">Participants : </string>
    <string name="fragment_rejoindre">Rejoindre</string>
    <string name="mon_profil">Mon Profil</string>
</resources>