<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_drawer_accueil" />
        <item
            android:id="@+id/nav_mes_links"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_drawer__mes_links" />
        <item
            android:id="@+id/nav_tables"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_tables" />
        <item
            android:id="@+id/nav_sorties"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_sorties" />
        <item
            android:id="@+id/nav_trajets"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_trajets" />
        <item
            android:id="@+id/nav_covoiturage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_covoiturage" />
        <item
            android:id="@+id/nav_calendrier"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_calendrier" />
    </group>

    <item android:title="@string/navigation_drawer_parametres">
        <menu>
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/navigation_drawer_mon_mon_profil" />
            <item
                android:id="@+id/nav_deconnexion"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/navigation_drawer_deconnection" />
        </menu>
    </item>

</menu>
